5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1756_672.log
== TEST (2019-05-22 12:55:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("posições de um vetor")))

v1 = ones(n, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:55:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("posições de um vetor")))

v1 = ones(6, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:56:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("posições de um vetor")))

v1 = ones(6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:57:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("posições de um vetor")))
 = ones(6, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 4
    = ones(6, dtype=int)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:57:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("posições de um vetor")))
v1 = ones(6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:58:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("posições de um vetor")))
v1 = ones(6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:01:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("posições de um vetor:" )))
v1 = ones(6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:02:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n = array(eval(input("posições de um vetor:" )))
v1 = ones(6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:03:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n = array(eval(input("posicoes de um vetor:" )))
v1 = ones(6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 13:03:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n = array(eval(input("posicoes de um vetor:" )))
v1 = ones(6, dtype=int)
print(v1)
-- EXECUTION TIME:
0.492745
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:03:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n = array(eval(input("posicoes de um vetor:" )))
v1 = ones(n, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 13:03:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n = array(eval(input("posicoes de um vetor:" )))
v1 = ones(n, dtype=int)
print(v1)
-- EXECUTION TIME:
0.60673
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:43:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n = array(eval(input("posicoes de um vetor:" )))
v1 = ones(n, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
